Fixed uneven sizing of story numbering

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,8 +83,16 @@ p {
     align-items: center;
 }
 
+.item > div:first-of-type {
+    width: 12%;
+}
+
+.item > div {
+    width: 88%;
+}
+
 .item-no {
-    padding: 0 2.5rem 0 1rem;
+    /* padding: 0 2.5rem 0 1rem; */
     font-size: 1.5rem;
     color: grey;
     font-weight: 300;
